--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,18 +1,26 @@
-html {
-    width: 100%;
+.popup {
+    width: 275px;
+    height: 150px;
 }
 
 .header {
     width: 280px;
     height: 50px;
     margin: 0px;
-    padding: 12px 0px;
     justify-content: center;
+    align-content: center;
+}
+
+.imgDiv {
+    text-align: center;
 }
 
 .logo {
-    width: 240px;
-    height: 135px;
+    width: 120px;
+    height: 68px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
@@ -23,9 +31,18 @@ h1 {
     font-weight: 300;
 }
 
+.description {
+    text-align: center;
+}
+
 p {
     margin: 0px 4px 4px 0px;
-    font-family: sans-serif;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
+}
+
+a {
+    font-weight: 600;
+    color: #5a50a2;
+    text-decoration: underline;
 }
